Fixed UnsupportedOperationException